Fixed to run with Java 9/Java 10